[tool.poetry]
name = "fastapi-healthz"
version = "0.5.1"
description = "A module to have a FastAPI HealthCheck for database, RabbitMQ server, Redis, MongoDB or external URI to validate their healths."
authors = ["Matteo Cacciola <matteo.cacciola@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/matteocacciola/fastapi_healthz"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: FastAPI"
]

[tool.poetry.dependencies]
python = "^3.9"
pika = { version = "^1.3.2", optional = true }
fastapi = "^0.111.0"
pydantic = "^2.8.2"
requests = { version = "^2.31.0", optional = true }
aioredis = { version = "^2.0.1", optional = true }
sqlalchemy = { version = "^2.0.22", optional = true }
pymongo = { version = "^4.7.3", optional = true }

[tool.poetry.dev-dependencies]

[tool.poetry.extras]
rabbitmq = ["pika"]
redis = ["aioredis"]
database = ["sqlalchemy", "asyncpg"]
mongodb = ["pymongo"]
uri = ["requests"]
all = ["pika", "aioredis", "sqlalchemy", "asyncpg", "pymongo", "requests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
