[tool.poetry]
name = "fastapi-healthz"
version = "1.2.5"
description = "A module to have a FastAPI HealthCheck for database, RabbitMQ server, Redis, MongoDB or external URI to validate their healths."
authors = ["Matteo Cacciola <matteo.cacciola@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/matteocacciola/fastapi_healthz"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: FastAPI"
]

[tool.poetry.dependencies]
python = "^3.10"
pika = { version = "^1.3.2", optional = true }
fastapi = "^0.116.1"
pydantic = "^2.11.7"
requests = { version = "^2.32.5", optional = true }
redis = { version = "^6.4.0", optional = true }
sqlalchemy = { version = "^2.0.43", optional = true }
pymongo = { version = "^4.9.1", optional = true }

[tool.poetry.extras]
rabbitmq = ["fastapi", "pydantic", "requests", "pika"]
redis = ["fastapi", "pydantic", "requests", "redis"]
database = ["fastapi", "pydantic", "requests", "sqlalchemy", "psycopg2-binary"]
mongodb = ["fastapi", "pydantic", "requests", "pymongo"]
uri = ["fastapi", "pydantic", "requests"]
all = ["fastapi", "pydantic", "pika", "redis", "sqlalchemy", "psycopg2-binary", "pymongo", "requests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
